# bit

./: .gitignore  README.md  biome.json  config.html  index.html  package.json  vite.config.ts
.serena/: project.yml
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: mcp_annotation_coverage.rs  mcp_oauth_smoke.rs  whisper_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  audio.rs  config.rs  lib.rs  main.rs  mcp.rs  motion.rs  stt.rs  tools.rs  workflows.rs
src-tauri/src/mcp/: http.rs  oauth.rs
src/bit/: bit.ts  shapes.ts
src/config/: main.ts  styles.css
tools/: render_bit_icon.py
