[package]
name = "bit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local speech-to-text: Parakeet TDT 0.6B v2 via ONNX Runtime (CPU)
transcribe-rs = { version = "0.3.11", default-features = false, features = ["onnx"] }
cpal = "0.15"
ureq = { version = "2", features = ["json"] }
tauri-plugin-autostart = "2"
rmcp = { version = "1.7.0", features = ["auth", "client", "transport-streamable-http-client-reqwest"] }
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["io-util", "net", "sync", "time", "rt"] }
reqwest = { version = "0.13.4", features = ["json"] }
url = "2.5.8"
socket2 = "0.6.4"
libc = "0.2.186"

[lints.clippy]
# `cargo clippy -- -D warnings` (see `bun run lint:rust`) escalates these to errors.
all = "warn"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt"] }

